--- a/Quiz1.ipynb
+++ b/Quiz1.ipynb
@@ -236,26 +236,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yebGhek0INBO",
-        "outputId": "47546668-aaf5-471b-8297-c6cfdea5682f"
+        "outputId": "898ee368-9205-49a6-f622-635b675f3f84"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "stat\n"
+            "stat ,\n",
+            "sids\n"
           ]
         }
       ],
       "source": [
-        "print('stat') # เเสดง output ออกมาที่หน้าจอ"
+        "print('stat',',') # เเสดง output ออกมาที่หน้าจอ\n",
+        "print('sids')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Quiz1\n",
+        "print มาก ที่มี ก.ไก่ 100 ตัว"
+      ],
+      "metadata": {
+        "id": "RUJfsU1I7ygW"
+      }
     },
     {
       "cell_type": "code",
@@ -267,7 +279,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BAhFWGaz4jzF",
-        "outputId": "7ccab76c-ce0b-4a34-edaa-aefb602e6a81"
+        "outputId": "3c98c85f-0684-4add-d312-5434d21a9fa1"
       },
       "execution_count": null,
       "outputs": [
@@ -304,6 +316,83 @@
     {
       "cell_type": "code",
       "source": [
+        "modulo (%) #การหารเอาเศษ เช็คเลขคู่เลขคี่ได้ด้วยการหารด้วย2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "ZzAYCFWd-bh2",
+        "outputId": "e08c58c6-4989-48a0-a476-31ee593f7bb5"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-af36ce5fd729>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    modulo (%) #การหารเอาเศษ เช็คเลขคู่เลขคี่ได้ด้วยการหารด้วย2\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "7%4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sKqUNtU4-8d5",
+        "outputId": "2fd9f700-5210-4581-a292-daa739c3ee57"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "4**4 #'**' คือการยกกำลัง 4ยกกำลัง4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vg0GKFbb_JNf",
+        "outputId": "f17bad82-26e8-4dac-b305-819687df2d92"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "256"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "vartest1 = 1+3 # การตั้งตัวเเปรไว้"
       ],
       "metadata": {
@@ -311,15 +400,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "pri+"
-      ],
-      "metadata": {
-        "id": "LSf_65Z80m0b"
-      }
     },
     {
       "cell_type": "code",
