--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "lBLVhL424rtV"
       },
@@ -71,7 +71,7 @@
         "id": "VBCxSIQC6iAQ",
         "outputId": "1be6d518-7fba-4705-8fa8-9bad421ff586"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "iCsSGEV78uNZ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "0-6XIDg56m19"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         "id": "jB4-bDxy7BWW",
         "outputId": "a28a151d-a6cd-4b94-eb8d-ad9aad75f828"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
         "id": "wmoH2mdO7CE6",
         "outputId": "ba774e42-0be6-47b9-de37-cd182e14c675"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
         "id": "rzX2-3H97jps",
         "outputId": "cc8dc1ed-cb2f-402f-ec8c-21d661f79a5c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
         "id": "Zh4n8eRa7oxX",
         "outputId": "375bc985-45d5-4681-e948-091c95d7f8dd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +232,7 @@
         "id": "nUM_19Zh796m",
         "outputId": "266bd70b-8fcf-4810-8466-4d0d4ae91675"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,7 +312,7 @@
         "id": "cheaKJLy8il0",
         "outputId": "68ace556-a033-4922-e5e3-df585084c253"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
         "id": "DJveF2EF8o3C",
         "outputId": "d738e287-be8f-4fcd-9d29-f37f34b5d651"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +373,7 @@
       "metadata": {
         "id": "w8j852-N9D0C"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -389,7 +389,7 @@
         "id": "1A40gYHq9sFO",
         "outputId": "13d4ac0a-feed-4c6f-aad7-c150bdd8647a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +415,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
         "id": "xNF6VMfc99Dd",
         "outputId": "e7702931-d383-4960-c82e-b2d62c6f6724"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,7 +468,7 @@
       "metadata": {
         "id": "CUIwBVuV-FAh"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +483,7 @@
         "id": "Orrj4t3l-imZ",
         "outputId": "0a428ca1-244d-4326-9914-6022bb17a594"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +510,7 @@
         "id": "UVUUwRgp-wMm",
         "outputId": "708e3d6e-9c2a-4944-fb1a-10be58a403df"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +533,7 @@
         "id": "zbIiLEnw-82e",
         "outputId": "df0f6fee-3bc1-4d2b-9204-34f05e69ab10"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +559,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,7 +585,7 @@
         "id": "5QR-pmG7_PXg",
         "outputId": "172f0f2e-5017-4a8d-8b5b-9e012503bb2b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +956,7 @@
         "id": "SC-N7iabDvI_",
         "outputId": "b52ccb62-99cc-4e9c-eba9-0a0ac6251959"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -992,7 +992,7 @@
         "id": "lNle8MdVD4iF",
         "outputId": "0a4bb3fe-1e6f-43d0-b468-695f6fddccff"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1018,7 @@
         "id": "KIryJE5oGV0K",
         "outputId": "245fe17e-cc94-44f6-9f45-abfab867b9b2"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1044,7 @@
         "id": "Hh9fMH7ED8Qh",
         "outputId": "755ca81c-dda0-4ca4-bfc9-72b319aec58f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,7 +1070,7 @@
         "id": "cdPQJNblFswJ",
         "outputId": "ba8a2828-638e-462e-e2a9-912753cbbc0e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1105,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1127,7 +1127,7 @@
       "metadata": {
         "id": "F8XgeKgAGlje"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1142,7 +1142,7 @@
         "id": "M4XY3ySkHBMs",
         "outputId": "516ad9b4-c31f-4578-d3f9-3907e567c764"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1168,7 +1168,7 @@
         "id": "FKLphSs4HIvs",
         "outputId": "26f61ef3-1df6-4823-a78f-b9f6662f1410"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1194,7 +1194,7 @@
         "id": "c9Mp6i37HTWL",
         "outputId": "31f21ab6-b763-417d-df34-6f6fd293a378"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1229,7 +1229,7 @@
       "metadata": {
         "id": "F7j8Bxyu6cOu"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1245,7 +1245,7 @@
           "height": 36
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1275,7 +1275,7 @@
           "height": 36
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1305,7 @@
           "height": 36
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1335,7 +1335,7 @@
           "height": 36
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1453,7 +1453,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HW 2"
+        "##Examples HW 2\n",
+        "\n"
       ],
       "metadata": {
         "id": "uBTAm2P0JHlD"
@@ -1740,7 +1741,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1754,7 +1755,7 @@
     {
       "cell_type": "code",
       "source": [
-        "q1 = '19:25:30' #ข้อที่2\n",
+        "q1 = '09:11:50' #ข้อที่2\n",
         "Q1 = q1.split(\":\")\n",
         "hours1 = int(Q1[0])*3600\n",
         "minutes1 = int(Q1[1])*60\n",
@@ -1774,18 +1775,18 @@
       ],
       "metadata": {
         "id": "u8iGJsjLBcsn",
-        "outputId": "3e59e302-5557-41da-856d-d6658fb42dc5",
+        "outputId": "7ce1d08e-3340-46fb-cdf2-fa8fdfbd93bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " จากเวลา ['19', '25', '30'] ถึง ['21', '30', '15'] เป็นเวลาห่างกัน 2:4:45\n"
+            " จากเวลา ['09', '11', '50'] ถึง ['21', '30', '15'] เป็นเวลาห่างกัน 12:18:25\n"
           ]
         }
       ]
@@ -1793,7 +1794,7 @@
     {
       "cell_type": "code",
       "source": [
-        "q1 = '09:11:50' #ข้อที่3\n",
+        "q1 = '19:25:30' #ข้อที่3\n",
         "Q1 = q1.split(\":\")\n",
         "hours1 = int(Q1[0])*3600\n",
         "minutes1 = int(Q1[1])*60\n",
@@ -1813,18 +1814,18 @@
       ],
       "metadata": {
         "id": "FnRBaoIRFNwE",
-        "outputId": "0eff3e39-58c8-47bc-95c5-f77fc89684a6",
+        "outputId": "249a645e-e11f-4a5f-fc64-48a0dd42ec01",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " จากเวลา ['09', '11', '50'] ถึง ['03', '10', '15'] เป็ยเวลาห่างกัน -6:58:25\n"
+            " จากเวลา ['19', '25', '30'] ถึง ['03', '10', '15'] เป็ยเวลาห่างกัน -16:44:45\n"
           ]
         }
       ]
