--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -1867,7 +1867,7 @@
       "metadata": {
         "id": "JO4DdI_YO--S"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1892,7 +1892,7 @@
         "id": "YbHKxX0vQQFy",
         "outputId": "f44cadd1-ba36-42f6-aef9-62f051aa77f9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1922,7 +1922,7 @@
         "id": "npYbBbi3QV8w",
         "outputId": "d62494ab-5864-4bd6-fce6-30718350cc8b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1951,7 +1951,7 @@
         "id": "hkqvpV3OQb7J",
         "outputId": "159ee1c9-e364-4d6e-eba4-d178552cac3a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1977,7 +1977,7 @@
         "id": "QgtRzEGuQvzJ",
         "outputId": "9653bc85-58f2-4dcd-e5a8-cf4095abfb54"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2008,7 +2008,7 @@
       "metadata": {
         "id": "-IklRCZWQ3lj"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2023,7 +2023,7 @@
         "id": "nXExzxBqRZDj",
         "outputId": "ae9848ba-7ae3-4f47-c88b-391a28515390"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2045,7 +2045,7 @@
       "metadata": {
         "id": "0_jOYSTLRmiY"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2060,7 +2060,7 @@
         "id": "pkEbW_3BRtbx",
         "outputId": "2978ab17-9fbc-4c92-b442-94270690b301"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2119,7 +2119,7 @@
       "metadata": {
         "id": "IagF0X0JSgz4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2130,7 +2130,7 @@
       "metadata": {
         "id": "y8GeL7EVVtum"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2141,7 +2141,7 @@
       "metadata": {
         "id": "kRpe_NuNVSnG"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2156,7 +2156,7 @@
         "id": "j2Fn84S2VlHS",
         "outputId": "a3019835-ca48-46fd-fd89-320a0d31e011"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2182,7 +2182,7 @@
         "id": "z3kaxYvNVple",
         "outputId": "8dda4308-a37c-4af9-9b11-e174dcbe718b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2208,7 +2208,7 @@
         "id": "gZea0RskV-lB",
         "outputId": "cc34f697-c329-4df4-cb69-4aa41869232a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2234,7 +2234,7 @@
         "id": "EbHREu9VWJNW",
         "outputId": "ab1b96e3-35ea-47fd-d36a-74bd0051aafc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2260,7 +2260,7 @@
         "id": "3E19608oWjDn",
         "outputId": "7c4501fd-acd6-47f4-c0b9-60acdd5dfd6f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2282,7 +2282,7 @@
       "metadata": {
         "id": "hUw-s3j0XKAS"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2297,7 +2297,7 @@
         "id": "hoQ6fEsVXZ3Q",
         "outputId": "636ef596-e8fd-4080-c906-4f6077bdd8cb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2320,7 +2320,7 @@
         "id": "4AWoU--sXn-G",
         "outputId": "65ff4989-ce01-40ef-b9b2-8b32ff74e0e6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2346,7 +2346,7 @@
         "id": "PW6bxH_qZvpX",
         "outputId": "3a67adea-24b5-48d4-f87c-469e29f2b675"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2377,7 +2377,7 @@
       "metadata": {
         "id": "hXAdabpKYT-3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2388,7 +2388,7 @@
       "metadata": {
         "id": "3iH_fTnEYKgd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2403,7 +2403,7 @@
         "id": "pMXNzWApY9KO",
         "outputId": "2dc7d175-4daf-4bfc-f654-0d3b10cd888d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2430,7 +2430,7 @@
         "id": "9lks4kd7Zjts",
         "outputId": "6e8f26a0-d861-4848-9b25-9d0641faf6cf"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2456,7 +2456,7 @@
         "id": "W2o68qGO402Q",
         "outputId": "9b351ba6-696c-45f7-d792-de1a35f09dfa"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2488,7 +2488,7 @@
       "metadata": {
         "id": "A0d3SHQlZCjN"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2503,7 +2503,7 @@
         "id": "xKKIZFTGaLL-",
         "outputId": "39d1e858-5e8c-4dc7-b011-d6191b20747c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2527,7 +2527,7 @@
       "metadata": {
         "id": "49Tm3yKLaVhk"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2542,7 +2542,7 @@
         "id": "oDyOMxpPamGR",
         "outputId": "49388cb0-d2ff-4d0f-bc65-1fcb53be13d4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2570,7 +2570,7 @@
         "id": "iUklcsVdaqS2",
         "outputId": "cb43037b-11d6-412b-80f0-64e48f39d648"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2598,7 +2598,7 @@
         "id": "AmgRjVJabVMt",
         "outputId": "e232eb3e-960f-488f-f6ef-f38bce8b20d2"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2627,7 +2627,7 @@
       "metadata": {
         "id": "EIxbS322cB7G"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2642,7 +2642,7 @@
         "id": "VjV6zUm0cGaU",
         "outputId": "6858a20d-e2be-420b-8f2a-d7b12d909689"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2667,7 +2667,7 @@
       "metadata": {
         "id": "h1oyLcJQcfas"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2682,7 +2682,7 @@
         "id": "vjFcEvRIcpje",
         "outputId": "d0c51d55-7000-4ce8-b241-a253ba71e7e1"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2730,7 +2730,7 @@
         "id": "IGkMkzuQc8RM",
         "outputId": "9e52db02-e66a-423d-a031-0f99a8bb3e8a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2757,7 +2757,7 @@
         "id": "A_hdZMC0dQKk",
         "outputId": "e026576c-397a-4e25-c3e5-65bbec7f7dde"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2808,7 +2808,7 @@
         "id": "c4bkOZiXecLD",
         "outputId": "4d987df1-3415-488e-bc35-38675f292482"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2852,7 +2852,7 @@
       "metadata": {
         "id": "RPJwJVeKe1nT"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2894,7 +2894,7 @@
         "id": "DsbR04TcgOwS",
         "outputId": "6c39bf40-0534-4ac0-85c2-8cb7610f03c2"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2921,7 +2921,7 @@
         "id": "qe-s_XrOgOyq",
         "outputId": "f4b79278-644c-4e10-e0a3-42673f004a1d"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2958,7 +2958,7 @@
         "id": "NKYKRj07gO1R",
         "outputId": "1d4f6847-95c2-4514-f052-780398dad376"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2985,7 +2985,7 @@
         "id": "nHwgaOmCgO3a",
         "outputId": "ac3f7747-2e43-4aab-b75f-ed362d20ea08"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3012,7 +3012,7 @@
         "id": "C5PzhxDUgz1t",
         "outputId": "ce647670-12c6-4410-96dd-568244fe5884"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3041,7 +3041,7 @@
         "id": "tySGc-Qegz4K",
         "outputId": "ec38b10b-646f-43b3-b8c0-dc737da650ef"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3066,7 +3066,7 @@
         "id": "iD5WOUp5hTVM",
         "outputId": "c334f328-5159-4fed-a325-8797a1e598cc"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3102,7 +3102,7 @@
         "id": "lm25tQZg9Yni",
         "outputId": "c09b723a-0ced-433e-d940-29b538764316"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3128,7 +3128,7 @@
       "metadata": {
         "id": "JfNaQXo093OG"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3143,7 +3143,7 @@
         "id": "CAFCiaR_-Uf0",
         "outputId": "5d3426de-30aa-42e6-fbd2-25f635a18824"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3171,7 +3171,7 @@
         "id": "f0YbW7OH-5kA",
         "outputId": "586d397b-e6f6-4001-c77c-13d8c7a745e2"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3208,7 +3208,7 @@
         "id": "1cP_Fmu2h2jS",
         "outputId": "adca49bd-df65-4be1-89fc-14324ae518c9"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3269,7 +3269,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3414,6 +3414,79 @@
       "metadata": {
         "id": "glrz8W3880pL"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "background = 11\n",
+        "\n",
+        "LogoKawklai = background * np.ones((24,18))\n",
+        "LogoKawklai[2,0:18] = 99\n",
+        "LogoKawklai[3,1:17] = 99\n",
+        "LogoKawklai[4,1:17] = 99\n",
+        "LogoKawklai[5:7,14:16] = 99\n",
+        "LogoKawklai[7:9,13:15] = 99\n",
+        "LogoKawklai[9:11,12:14] = 99\n",
+        "LogoKawklai[11:13,11:13] = 99\n",
+        "LogoKawklai[13:15,10:12] = 99\n",
+        "LogoKawklai[15:17,9:11] = 96\n",
+        "LogoKawklai[17:19,8:10] = 99\n",
+        "LogoKawklai[19:21,8:9] = 96\n",
+        "LogoKawklai[19:22,7:8] = 99\n",
+        "\n",
+        "LogoKawklai[7,2:12] = 99\n",
+        "LogoKawklai[8,3:11] = 99\n",
+        "LogoKawklai[9,3:11] = 99\n",
+        "LogoKawklai[9:11,8:10] = 96\n",
+        "LogoKawklai[11:12,8:10] = 99\n",
+        "LogoKawklai[12:14,7:9] = 96\n",
+        "LogoKawklai[14:16,6:8] = 99\n",
+        "LogoKawklai[15:16,6:7] = 96\n",
+        "LogoKawklai[16:17,6:7] = 99\n",
+        "\n",
+        "print(LogoKawklai)"
+      ],
+      "metadata": {
+        "id": "3SSA2scV0unO",
+        "outputId": "935ec2dd-2c51-45ae-af20-da35dc31326a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99.]\n",
+            " [11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11.]\n",
+            " [11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11.]\n",
+            " [11. 11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11. 99. 99. 11. 11. 11.]\n",
+            " [11. 11. 11. 99. 99. 99. 99. 99. 99. 99. 99. 11. 11. 99. 99. 11. 11. 11.]\n",
+            " [11. 11. 11. 99. 99. 99. 99. 99. 96. 96. 99. 11. 99. 99. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 11. 99. 99. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 99. 99. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 11. 99. 99. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 99. 99. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 96. 99. 11. 96. 96. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 99. 11. 11. 96. 96. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 99. 96. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 99. 96. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 99. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
